--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1010,9 +1010,13 @@
     margin-bottom: 1rem;
     padding: 1rem 0;
 
+    & .user-role {
+        font-weight: var(--fw-semibold);
+        gap: 0.5rem;
+    }
+
     & i {
         color: var(--primary-red);
-        margin-right: 1rem;
     }
 
     & p {
@@ -1058,6 +1062,7 @@
             .post-post-category {
                 width: 25%;
                 color: var(--primary-purple);
+                font-weight: var(--fw-semibold);
             }
     
         }
