--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@
     align-items: center;
     padding: 1rem;
     background-color: var(--primary-purple);
-    
+        
     & a {
         text-decoration: none;
         color: var(--primary-white);
@@ -99,15 +99,49 @@
     & a:active {
         color: var(--primary-grey);
     }
+
+    & #nav-left {
+        display: flex;
+        gap: 10px;
+        margin-left: 20vw;
+    }
+
+    & #nav-right {
+        display: flex;
+        gap: 10px;
+        margin-right: 20vw;
+    }
 }
 
 /* Footer */
 
 .footer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
     padding: 1rem;
+    color: var(--primary-dark-grey);
+
+    & .footer-details {
+        display: flex;
+        gap: 15px;
+    }
+
+    & a {
+        text-decoration: none;
+        color: var(--primary-dark-grey);
+        transition: var(--transition);
+
+        &:hover {
+            color: var(--primary-purple);
+        }
+
+        &:active {
+            color: var(--primary-dark-grey);
+        }
+    }
 }
 
 /* Main */
@@ -1074,4 +1108,85 @@
             color: var(--primary-grey);
         }
     }
+}
+
+/*
+***************************
+      Media Queries
+***************************
+*/
+
+/* Small devices (landscape phones, 576px and up) */
+
+@media screen and (max-width : 576px) {
+    
+    .navbar {
+        display: none;
+    }
+
+    .search-container {
+        
+        & .search {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+
+            & label {
+                font-size: 20px;
+            }
+
+            & input {
+                margin-right: 0;
+                width: 100%;
+            }
+
+        }
+        
+    }
+
+    .main-container {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+  
+        & .home-topic-item {
+            flex-direction: column;
+            font-weight: 500;
+            margin-bottom: 10px;
+
+            & .topic-item-details {
+                flex-direction: column;
+             
+            }
+        }
+    }
+
+
+    .footer {
+        background-color: var(--primary-purple);
+        color: var(--primary-white);
+        font-size: var(--font-size-label);
+        margin-top: 10px;
+        padding: 0.75rem;
+        
+        & .footer-details {
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+      
+            & a {
+                color: var(--primary-white);
+
+                &:hover {
+                    color: var(--primary-blue);
+                }
+
+                &:active {
+                    color: var(--primary-grey);
+                }
+            }
+        }
+    }
+
 }
